--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,57 @@
-.App {
-  text-align: center;
+.Top-banner {
+  width: 100%;
+  height: 500px;
+  background-color: var(--md-sys-color-tertiary-container);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 2rem;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.Top-banner-links {
+  display: flex;
+  flex-direction: row;
+  align-items: start;
+  width: 100%;
+  height: 120px;
+  background-color: var(--md-sys-color-secondary-container);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.top-banner-link-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 8px;
+  width: 33%;
+  height: 100%;
+  background-color: var(--md-sys-color-tertiary); 
+  color: var(--md-sys-color-on-tertiary);
+  cursor: pointer;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  width: 100%;
+  height: 90px;
+  background-color: var(--md-sys-color-primary);
+  position: sticky;
+  top: 0;
+  z-index: 100;
 }
 
-.App-link {
-  color: #61dafb;
+.Homepage {
+  width: 100%;
+  height: calc(100vh - 90px);
+  background-color: var(--md-sys-color-surface-container);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.no-margin {
+  margin: 0;
+}
+
+.padding-16 {
+  padding: 16px;
+}
+
+.padding-horizontal-16 {
+  padding: 0 16px
 }
