--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,7 @@
   width: 100%;
   height: calc(100vh - 90px);
   background-color: var(--md-sys-color-surface-container);
+  text-align: center;
 }
 
 .no-margin {
@@ -48,6 +49,10 @@
 
 .margin-0 {
   margin: 0;
+}
+
+.text-align-center {
+  text-align: center;
 }
 
 .display-block {
