--- a/src/App.css
+++ b/src/App.css
@@ -74,6 +74,9 @@
   color: var(--md-sys-color-on-secondary);
 }
 
+.container-color-surface {
+  background-color: var(--md-sys-color-surface-container);
+}
 
 .jetbrains-mono-600 {
   font-family: "JetBrains Mono", serif;
