--- a/src/components/Homepage/Homepage.css
+++ b/src/components/Homepage/Homepage.css
@@ -15,6 +15,7 @@
   width: 100%;
   height: 120px;
   background-color: var(--md-sys-color-secondary-container);
+  overflow: hidden;
 }
 
 .top-banner-link-container {
@@ -26,6 +27,21 @@
   height: 100%;
   color: var(--md-sys-color-on-tertiary);
   cursor: pointer;
+}
+
+.banner-title {
+  @media screen and (max-width: 1200px) {
+    font-size: 1.5rem;
+  }
+  @media screen and (max-width: 730px) {
+    display: none;
+  }
+}
+
+.banner-subtitle {
+  @media screen and (max-width: 1200px) {
+    display: none;
+  }
 }
 
 .App-header {
