--- a/src/App.css
+++ b/src/App.css
@@ -1,46 +1,30 @@
-.Top-banner {
-  width: 100%;
-  height: 500px;
-  background-color: var(--md-sys-color-tertiary-container);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 2rem;
+.stick-header {
+  position: sticky;
+  overflow: visible;
+  height: 90px;
+  top: 0;
+  z-index: 100;
 }
 
-.Top-banner-links {
-  display: flex;
-  flex-direction: row;
-  align-items: start;
-  width: 100%;
-  height: 120px;
-  background-color: var(--md-sys-color-secondary-container);
+.Stick-header {
+  position: sticky;
+  overflow: visible;
+  height: 90px;
+  top: 0;
+  z-index: 100;
 }
 
-.top-banner-link-container {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  gap: 8px;
-  width: 33%;
-  height: 100%;
-  color: var(--md-sys-color-on-tertiary);
-  cursor: pointer;
-}
-
-.Homepage {
-  width: 100%;
-  height: calc(100vh - 90px);
-  background-color: var(--md-sys-color-surface-container);
-  text-align: center;
-}
-
+/** Margin / Padding **/
 .no-margin {
   margin: 0;
 }
 
 .padding-16 {
   padding: 16px;
+}
+
+.padding-8 {
+  padding: 8px
 }
 
 .padding-horizontal-16 {
@@ -51,14 +35,30 @@
   margin: 0;
 }
 
+
+/** width / height **/
+.min-height-100vh {
+  min-height: 100vh;
+}
+
+
+/** Text **/
 .text-align-center {
   text-align: center;
 }
 
+.text-decoration-none {
+  text-decoration: none;
+}
+
+
+/** Display **/
 .display-block {
   display: block;
 }
 
+
+/** Color **/
 .container-color-primary {
   background-color: var(--md-sys-color-primary);
   color: var(--md-sys-color-on-primary);
@@ -78,9 +78,22 @@
   background-color: var(--md-sys-color-surface-container);
 }
 
+.container-color-secondary-container {
+  background-color: var(--md-sys-color-secondary-container);
+  color: var(--md-sys-color-on-secondary-container);
+}
+
+
+/** Font **/
 .jetbrains-mono-600 {
   font-family: "JetBrains Mono", serif;
   font-optical-sizing: auto;
   font-weight: 600;
+  font-style: normal;
+}
+
+.anton-regular {
+  font-family: "Anton", serif;
+  font-weight: 400;
   font-style: normal;
 }
