--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,12 +2,10 @@
     width: 100%;
     height: 90px;
     background-color: var(--md-sys-color-primary);
-    position: sticky;
-    top: 0;
-    z-index: 100;
     display: flex;
     align-items: center;
     color: var(--md-sys-color-on-primary);
+    transition: background-color 0.5s ease-in-out;
 }
 
 .App-header-inside {
