--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,13 @@
   z-index: 100;
 }
 
+.Page-subject {
+  font-size: 8rem;
+  letter-spacing: 4px;
+  transform: scale(1.6, 1);
+  overflow-y: hidden;
+}
+
 /** Margin / Padding **/
 .no-margin {
   margin: 0;
