Add Bloomboard page with overview

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,16 @@
+* {
+  font-family: "Noto Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  font-variation-settings:
+    "wdth" 100;
+}
+
+.Apps {
+  box-sizing: border-box;
+}
+
 .stick-header {
   position: sticky;
   overflow: visible;
@@ -42,16 +55,39 @@
   margin: 0;
 }
 
+.margin-8 {
+  margin: 8px;
+}
+
+.Article-paragraph {
+  text-indent: 25px;
+}
 
 /** width / height **/
 .min-height-100vh {
   min-height: 100vh;
 }
 
+.width-50-percent {
+  width: 50%;
+}
+
+.width-100-percent {
+  width: 100%;
+}
+
 
 /** Text **/
 .text-align-center {
   text-align: center;
+}
+
+.text-align-left {
+  text-align: start;
+}
+
+.text-align-right{
+  text-align: right;
 }
 
 .text-decoration-none {
@@ -103,4 +139,14 @@
   font-family: "Anton", serif;
   font-weight: 400;
   font-style: normal;
+}
+
+
+.noto-sans-500 {
+  font-family: "Noto Sans", serif;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  font-style: normal;
+  font-variation-settings:
+    "wdth" 100;
 }
