--- a/src/App.css
+++ b/src/App.css
@@ -100,6 +100,20 @@
   display: block;
 }
 
+/** Float **/
+.float-left {
+  float: left;
+}
+
+.float-right {
+  float: right;
+}
+
+/** Cursor **/
+.cursor-pointer {
+  cursor: pointer;
+}
+
 
 /** Color **/
 .container-color-primary {
@@ -124,6 +138,10 @@
 .container-color-secondary-container {
   background-color: var(--md-sys-color-secondary-container);
   color: var(--md-sys-color-on-secondary-container);
+}
+
+.white {
+  color: white;
 }
 
 
