--- a/src/components/Project/Project.BloomBoard/BloomBoard.css
+++ b/src/components/Project/Project.BloomBoard/BloomBoard.css
@@ -1,10 +1,23 @@
 .Article-body-frame {
-    background-color: var(--md-sys-color-surface-container-highest);
+    background-color: var(--md-sys-color-surface-container);
     min-height: calc(100vh - 290);
-    padding: 8px 0;
-    width: 100%;
-    max-width: 1300px;
+    padding: 8px 16px;
+    width: calc(100% - 32px);
+    max-width: 1299px;
     margin: auto;
+    min-height: calc(100vh - 310px);
+    text-align: start;
+
+    @media (min-width: 1300px) {
+        border-left: 4px groove gray;
+        border-right: 4px groove gray;
+    }
+}
+
+.Article-header {
+    border-left: 5px solid var(--md-sys-color-primary);
+    padding: 24px;
+    font-weight: 800;
 }
 
 .App-overview-container {
@@ -27,6 +40,7 @@
     text-align: right;
     width: 50%;
 }
+
 .Article-table-title {
     text-align: start;
     width: 50%;
