--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -1,5 +1,5 @@
 .Page-subject {
-    font-size: 8rem;
+    font-size: 10vw;
     letter-spacing: 4px;
     transform: scale(1.6, 1);
     overflow-y: hidden;
@@ -12,7 +12,6 @@
 
 .Main-content {
     width: 70%;
-
     @media screen and (max-width: 1499px) {
         width: 100%;
     }
@@ -53,6 +52,7 @@
 .Project-title {
     display: flex;
     align-items: center;
+    font-size: 1.5vw;
 }
 
 .Project-action {
@@ -91,7 +91,6 @@
 
 .Project-action:hover {
     box-shadow: 0 0 8px 1px gray;
-
 }
 
 .Project-action-icon {
