--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -37,6 +37,9 @@
     border-bottom: 1px solid var(--md-sys-color-outline-variant);
     overflow-x: hidden;
     box-sizing: border-box;
+    @media (max-width: 700px) {
+        display: none;
+    }
 }
 
 .Border-left {
@@ -101,6 +104,16 @@
     cursor: pointer;
     text-decoration: none;
     color: white;
+}
+
+
+.grid-row-2 {
+    display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  justify-items: center;
+  @media (min-width: 701px) {
+    display: none;
+  }
 }
 
 
