--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -12,6 +12,7 @@
 
 .Main-content {
     width: 70%;
+
     @media screen and (max-width: 1499px) {
         width: 100%;
     }
@@ -37,7 +38,20 @@
     border-bottom: 1px solid var(--md-sys-color-outline-variant);
     overflow-x: hidden;
     box-sizing: border-box;
+
     @media (max-width: 700px) {
+        display: none;
+    }
+}
+
+.Project-mobile-card {
+    width: 90%;
+    border-radius: 8px;
+    background-color: var(--md-sys-color-surface-container);
+    margin: 16px;
+    padding-bottom: 16px;
+    box-shadow: 0 0 8px 1px gray;
+    @media (min-width: 701px) {
         display: none;
     }
 }
@@ -50,6 +64,12 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    @media (max-width: 700px) {
+        width: 100%;
+        height: 20vw;
+        margin: auto;
+        background-image: linear-gradient( var(--md-sys-color-surface), var(--md-sys-color-surface-container-low), var(--md-sys-color-primary-container));
+    }
 }
 
 .Project-title {
@@ -67,7 +87,8 @@
     flex-direction: column;
 }
 
-.Project-action.visit, .more {
+.Project-action.visit,
+.more {
     display: flex;
 }
 
@@ -84,7 +105,7 @@
 }
 
 .Expand-content.open {
-    position:relative;
+    position: relative;
     height: 300px;
     width: 100%;
     margin-bottom: 20px;
@@ -108,14 +129,26 @@
 
 
 .grid-row-2 {
-    display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  justify-items: center;
-  @media (min-width: 701px) {
-    display: none;
-  }
+    @media (max-width: 700px) {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        justify-items: center;
+    }
+
 }
 
+.Display-none-700px-less {
+
+    @media (max-width: 700px) {
+        display: none;
+    }
+}
+
+.Width-100-percent-700px-less {
+    @media (max-width: 700px) {
+        width: 100%;
+    }
+}
 
 /** More expand styling **/
 .Project-more-container {
@@ -124,6 +157,9 @@
     width: 100%;
     height: 100%;
 }
+
+
+
 .Phone-image-frame {
     width: 169px;
     height: 300px;
