FIx header color change position
Scroll down when opening sidemenu on homepage

--- a/src/components/Project/Project.BloomBoard/BloomBoard.css
+++ b/src/components/Project/Project.BloomBoard/BloomBoard.css
@@ -38,6 +38,15 @@
 .Article-paragraph-body {
     display: flex;
     border-radius: 16px;
+    width: 90vw;
+}
+
+.Article-paragraph-body.show {
+    display: flex;
+}
+
+.Article-paragraph-body.hide {
+    display: none;
 }
 
 .Article-table-data {
