--- a/src/App.css
+++ b/src/App.css
@@ -52,12 +52,20 @@
   padding: 0 16px
 }
 
+.padding-vertical-16 {
+  padding: 16px 0;
+}
+
 .margin-0 {
   margin: 0;
 }
 
 .margin-8 {
   margin: 8px;
+}
+
+.margin-16 {
+  margin: 16px
 }
 
 .Article-paragraph {
@@ -77,6 +85,9 @@
   width: 100%;
 }
 
+.height-100-percent {
+  height: 100%;
+}
 
 /** Text **/
 .text-align-center {
@@ -104,6 +115,15 @@
 .display-block {
   display: block;
 }
+
+.display-flex {
+  display: flex;
+}
+  /** Flex alignment **/
+  .display-flex-center {
+    justify-content: center;
+    align-items: center;
+  }
 
 /** Float **/
 .float-left {
