--- a/src/components/Bloomboard/BloomboardApp.css
+++ b/src/components/Bloomboard/BloomboardApp.css
@@ -94,3 +94,16 @@
     color: aliceblue;
     font-weight: bold;
 }
+
+.Bloomboard-select {
+    font-size: 1rem;
+    border-radius: 8px;
+    border: solid gray 2px;
+    width: 40%;
+    padding: 8px 16px;
+}
+
+.Bloomboard-select option:checked {
+    background-color: var(--md-sys-color-secondary-container);
+    color: var(--md-sys-color-on-secondary-container);
+}
