--- a/src/components/BloomboardApp/Bloomboard/BloomboardApp.css
+++ b/src/components/BloomboardApp/Bloomboard/BloomboardApp.css
@@ -46,6 +46,12 @@
     border-radius: 50px;
     font-size: 1.3rem;
 }
+
+.Bloomboard-login-inputs-container button:disabled {
+    background-color: var(--md-sys-color-outline);
+    color: var(--md-sys-color-outline-variant);
+}
+
 .Bloomboard-login-inputs-container {
     display: flex;
     align-items: center;
