Add predict dialog design

--- a/src/components/BloomboardApp/BloomboardDetail/Bloomboard.css
+++ b/src/components/BloomboardApp/BloomboardDetail/Bloomboard.css
@@ -20,6 +20,16 @@
     padding: 0 20px;
 }   
 
+.BBDetail-body-calc {
+    background-color: var(--bloomboard-secondary-container);
+    margin: 8px 12px;
+    border-radius: 16px;
+    padding: 8px 4px;
+    display: flex;
+    width: 95%;
+    justify-self: center;
+}
+
 .BB-row {
     display: flex;
     flex-direction: column;
@@ -45,6 +55,33 @@
     display: flex;
     width: 100%;
     justify-content: right;
+}
+
+.BBCalcDialog {
+    border: none;
+    outline: none !important;
+    width: 60vw;
+    background-color: var(--md-sys-color-surface-container-highest);
+    border-radius: 16px;
+    padding: 16px 24px;
+}
+
+.BBCalcDialog-header {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    align-items: center;
+    gap: 16px;
+}
+
+dialog {
+    border: none !important;
+    outline: none !important;
+    margin: 20% 0;
+    transform: translateX(-50%);
+    left: 50%;
+    padding: 0;
+    background-color: transparent;
 }
 
 p {
