--- a/src/components/BloomboardApp/BloomboardDetail/Bloomboard.css
+++ b/src/components/BloomboardApp/BloomboardDetail/Bloomboard.css
@@ -1,8 +1,30 @@
 .BBDetail-top {
     padding: 28px 0;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
+}
+
+.BBDetail-score-board {
+    display: flex;
+    width: 100%;
+}
+
+.BBDetail-score-spot {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
+.BBDetail-score-spot.category {
+    width: 20%;
+}
+
+.BBDetail-score-spot.total {
+    width: 60%;
 }
 
 .BBDetail-body {
