--- a/src/themeColor.css
+++ b/src/themeColor.css
@@ -1,4 +1,10 @@
 :root {
+  --surface-1: #F2F2F2;
+  --surface-2: #BDBDBD;
+  --surface-3: #525252;
+
+  --box-shadow-1: 0 0 4px 0px gray;
+
   --md-sys-color-primary: rgb(32 106 78);
   --md-sys-color-surface-tint: rgb(32 106 78);
   --md-sys-color-on-primary: rgb(255 255 255);
