--- a/src/components/BloomboardApp/BloomboardDashboard/BBDashboard.css
+++ b/src/components/BloomboardApp/BloomboardDashboard/BBDashboard.css
@@ -21,21 +21,22 @@
 
 .BBDashboard-body {
     display: grid;
-    height: calc(100vh);
+    height: calc(100vh - 90px);
     grid-template-columns: 30% 70%;
+    overflow: hidden;
 }
 
 .BBDashboard-body>menu {
     background-color: var(--md-sys-color-surface);
     margin: 0;
     padding: 0 20px;
+    height: calc(100vh - 90px);
     overflow: scroll;
-    max-height: 100vh;
 }
 
 .BBDashboard-body>iframe {
     width: 100%;
-    height: 100vh;
+    height: 100%;
     overflow: scroll;
 }
 
