--- a/src/components/BloomboardApp/BloomboardDetail/Bloomboard.css
+++ b/src/components/BloomboardApp/BloomboardDetail/Bloomboard.css
@@ -5,26 +5,22 @@
     align-items: center;
 }
 
-.BBDetail-score-board {
-    display: flex;
+.BBDetail-grade-summary {
+    display: grid;
+    grid-template-columns: 25% 50% 25%;
+    text-align: center;
+    position:relative;
     width: 100%;
+    overflow-x: hidden;
 }
 
-.BBDetail-score-spot {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    height: 100%;
-    justify-content: center;
-    align-items: center;
+.BBDetail-grade-summary>div {
+    position:relative;
+    place-self: center;
 }
 
-.BBDetail-score-spot.category {
-    width: 20%;
-}
-
-.BBDetail-score-spot.total {
-    width: 60%;
+.BBDetail-grade-summary>div>h2, .BBDetail-grade-summary>div>h1 {
+    margin: 0;
 }
 
 .BBDetail-body {
